prow/cluster-bootstrap/oauth/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      volumes:
        - name: nginx
          configMap:
            name: oauth2-proxy-nginx
      containers:
        - name: nginx
          image: nginx:1.15.9-alpine
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 0.2
              memory: 128Mi
          ports:
            - name: nginx
              containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
        - name: oauth2-proxy
          image: quay.io/pusher/oauth2_proxy:v3.1.0
          imagePullPolicy: Always
          args:
          - --provider=github
          - --email-domain=*
          - --github-org=ouzi-dev
          - --upstream=file:///dev/null
          - --upstream=http://localhost/redirect/
          - --http-address=0.0.0.0:4180
          - --cookie-domain=.prow.testinfra.ouzi.io
          - --footer=-
          # Register a new application
          # https://github.com/settings/applications/new
          ports:
          - containerPort: 4180
            protocol: TCP
            name: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - name: http
    protocol: TCP
    targetPort: http
    port: 80
  selector:
    k8s-app: oauth2-proxy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  rules:
  - host: "oauth2.testinfra.ouzi.io"
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: http
        path: /
  tls:
    - hosts:
      - "oauth2.testinfra.ouzi.io"
      secretName: oauth2-testinfra-tls
